# Agent-mesh

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agentmesh/: __init__.py  config.py  events.py  main.py
agentmesh/api/: agent.py  execution.py  router.py  tools.py  websocket.py  workers.py  workflows.py
agentmesh/compiler/: __init__.py  compiler.py  errors.py  graph.py  validator.py
agentmesh/middleware/: __init__.py  auth.py  correlation.py
agentmesh/models/: __init__.py  log.py  task.py  workflow.py
agentmesh/observability/: __init__.py  logger.py  metrics.py
agentmesh/persistence/: __init__.py  repository.py
agentmesh/planner/: __init__.py  examples.py  planner.py  prompts.py
agentmesh/queue/: __init__.py  consumer.py  producer.py  streams.py
agentmesh/scheduler/: __init__.py  coordinator.py  executor.py  recovery.py  retry.py  scheduler.py  state.py
agentmesh/schemas/: __init__.py  workflow.py
agentmesh/tools/: __init__.py  base.py  echo.py  filesystem.py  http_tool.py  llm.py  registry.py  shell.py  templating.py
agentmesh/worker/: __init__.py  __main__.py  health.py  worker.py
alembic/: env.py
examples/: hn_digest_workflow.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  types.ts
tests/: conftest.py  test_agent_api.py  test_compiler.py  test_coordinator.py  test_graph.py  test_metrics.py  test_planner.py  test_queue.py  test_repository.py  test_scheduler.py  test_worker.py  test_workflows.py
(+20 files in other folders)
